[FIX] account_financial_report: Truncate the displayed information and respect the width of the table in the report. TT32557

--- a/account_financial_report/static/src/css/report.css
+++ b/account_financial_report/static/src/css/report.css
@@ -111,3 +111,22 @@
     margin-left: auto;
     font-family: Helvetica, Arial;
 }
+/*table_layout_fixed*/
+.table_layout_fixed {
+    table-layout: fixed;
+    width: 100%;
+}
+.table_layout_fixed thead,
+.table_layout_fixed tfoot {
+    background-color: #f0f0f0 !important;
+}
+.table_layout_fixed th,
+.table_layout_fixed td {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.table_layout_fixed thead th,
+.table_layout_fixed tbody td {
+    border: 1px solid lightGrey;
+}
